--- a/web/src/content/help/faq.mdx
+++ b/web/src/content/help/faq.mdx
@@ -15,6 +15,10 @@ Software development: Writing features, tests, and scripts across common languag
 
 Multiple. The orchestrator ("Buffy") uses Claude Opus 4.5 in Default and Max modes, or Grok 4.1 Fast in Lite mode. Subagents are matched to their tasks: GPT-5.1 and Claude Opus 4.5 for code editing, Gemini 2.5 Pro for deep reasoning, Grok 4 Fast for terminal commands and research, and Relace AI for fast file rewrites. See [What models do you use?](/docs/advanced/what-models) for the full breakdown.
 
+## Can I use my Claude Pro or Max subscription with Codebuff?
+
+Yes! If you have a Claude Pro or Max subscription, you can connect it to Codebuff with the command `/connect:claude`. Codebuff will use your subscription for Claude model requests, saving you credits.
+
 ## Is Codebuff open source?
 
 Yes. It's Apache 2.0 at [github.com/CodebuffAI/codebuff](https://github.com/CodebuffAI/codebuff).
